Bug 1282671 - Loose the assertion checking win->IsDying(). r=bholly